# MusicPlayer

./: .editorconfig  .gitignore  .prettierrc  .stylelintrc.json  CLAUDE.md  README.en.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: tauri2-introduction.md  upstream-changes.md  why-rust.md
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  taskbar.rs  tray.rs
src-tauri/src/audio/: mod.rs  player.rs
src-tauri/src/commands/: library.rs  mod.rs  playback.rs  playlist.rs  tag.rs  taskbar.rs
src-tauri/src/metadata/: reader.rs  writer.rs
src-tauri/src/models/: artist.rs  browse.rs  library_folder.rs  mod.rs  player_state.rs  playlist.rs  tag.rs  track.rs
src-tauri/src/scanner/: folder_scanner.rs  mod.rs  watcher.rs
src-tauri/src/storage/: db.rs  folder_repo.rs  library_repo.rs  mod.rs  playlist_repo.rs  tag_repo.rs
src-tauri/taskbar-helper/: Cargo.toml
src-tauri/taskbar-helper/src/: composition.rs  lib.rs  windows.rs
src-tauri/tests/: artist_credit_test.rs  audio_test.rs  batch_delete_test.rs  batch_playlist_test.rs  concurrent_test.rs  edge_cases_test.rs  gapless_test.rs  import_test.rs  library_folder_test.rs  metadata_test.rs  migration_test.rs  scanner_test.rs  storage_test.rs  symlink_test.rs  tag_test.rs  track_ended_test.rs  tray_test.rs
src-tauri/tests/common/: mod.rs
src/lib/: test-helpers.ts
src/lib/__mocks__/: dialog.ts  tauri.ts
src/lib/api/: library.test.ts  library.ts  playback.ts  playlist.ts  tag.test.ts  tag.ts  taskbar.test.ts  taskbar.ts
src/lib/components/: ErrorNotification.svelte  MainView.svelte  MainView.test.ts
src/lib/logic/: collection-actions.test.ts  collection-actions.ts  column-resize.test.ts  column-resize.ts  error-handler.test.ts  error-handler.ts  format.test.ts  format.ts  keyboard.test.ts  keyboard.ts  platform.ts  playback-actions.test.ts  playback-actions.ts  playback-integration.test.ts  playlist-editor.test.ts  playmode.test.ts  playmode.ts  reorder-integration.test.ts  reorder.test.ts  reorder.ts  selection.test.ts  selection.ts  shortcut-data.ts  sorting.test.ts  (+7 more)
(+36 files in other folders)
